--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
   padding: 10px 20px;
   max-width: 400px;
   width: 100%;
-  background: #000;
+  background: var(--c-sec);
 }
 .container button {
   cursor: pointer;
