--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;800&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+}
+.flex {
+  display: flex;
+  gap: 10px;
 }
 .center {
   display: flex;
@@ -22,6 +28,7 @@ button {
   background: var(--c-sec);
   border: none;
   color: #000;
+  border-radius: 5px;
 }
 .rounded {
   border-radius: 25px;
