--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  z-index: 99;
 }
 .header .links {
   display: flex;
