--- a/src/styles/auth.css
+++ b/src/styles/auth.css
@@ -2,11 +2,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  min-height: calc(100vh - 70px);
 }
 .auth form {
   padding: 50px 20px;
-  max-width: 350px;
+  max-width: 380px;
   width: 100%;
   display: flex;
   flex-direction: column;
