--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -13,4 +13,8 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  cursor: pointer;
+}
+.dashboard .add-icon .plus {
+  font-size: 60px;
 }
