--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -14,6 +14,10 @@
   align-items: center;
   flex-direction: column;
   cursor: pointer;
+  border: 1px solid rgb(209, 209, 209);
+}
+.dashboard .add-icon:hover {
+  background: rgb(202, 202, 202);
 }
 .dashboard .add-icon .plus {
   font-size: 60px;
