--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -3,6 +3,7 @@
   gap: 20px;
   min-height: calc(100vh - 70px);
   padding: 30px;
+  flex-direction: column;
 }
 .dashboard .add-icon {
   width: 200px;
