--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -4,6 +4,7 @@
   left: 50%;
   z-index: 9;
   padding: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 0 10px rgb(0 0 0 / 40%);
   border-radius: 5px;
+  transform: translate(-50%, -50%);
 }
