--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -14,3 +14,12 @@
   gap: 20px;
   margin-top: 20px;
 }
+
+.dashboard .addItem {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px;
+}
