--- a/src/styles/pricing-card.css
+++ b/src/styles/pricing-card.css
@@ -4,4 +4,17 @@
   background: #fff;
   border-radius: 5px;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.4);
+  display: grid;
+  padding: 30px;
+  grid-template-rows: 50px 1fr;
+}
+.pricing-card h3 {
+  color: var(--c-acc);
+  text-align: center;
+  border-bottom: 1px solid rgb(190, 190, 190);
+}
+.pricing-card .bottom {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
