--- a/src/styles/pricing-card.css
+++ b/src/styles/pricing-card.css
@@ -17,4 +17,11 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  align-items: center;
+}
+.pricing-card .bottom .price {
+  font-size: 2.5rem;
+}
+.pricing-card .bottom .price span {
+  font-size: 16px;
 }
