--- a/src/styles/pricing-card.css
+++ b/src/styles/pricing-card.css
@@ -30,12 +30,13 @@
   background: var(--c-pri-light);
   color: #fff;
   font-size: 1rem;
-  transition: 0.5s ease;
+  transition: background 0.5s ease;
 }
 .pricing-card .bottom button:hover {
   background: #fff;
   border: 2px solid var(--c-pri-light);
   color: var(--c-pri);
+  padding: 13px 18px;
 }
 .pricing-card .feature-list {
   display: flex;
