add margin to feature list

--- a/src/styles/pricing-card.css
+++ b/src/styles/pricing-card.css
@@ -16,7 +16,7 @@
 .pricing-card .bottom {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 30px;
   align-items: center;
 }
 .pricing-card .bottom .price {
@@ -47,6 +47,7 @@
   display: flex;
   align-items: center;
   gap: 10px;
+  margin-bottom: 10px;
 }
 .pricing-card #check {
   height: 20px;
