--- a/src/styles/subscription.css
+++ b/src/styles/subscription.css
@@ -30,3 +30,10 @@
   display: flex;
   gap: 100px;
 }
+.subscription .payment button {
+  margin-top: 30px;
+  width: 100%;
+}
+.subscription .payment h2 {
+  margin-bottom: 20px;
+}
